# INF237

./: .gitignore  README.md
C++/: CMakeLists.txt
C++/src/: CMakeLists.txt  ChemistVow.cpp  ClosestPair2.cpp  ColoringGraphs.cpp  CountingTriangles.cpp  Graph.cpp  GruesomeCave.cpp  GuessTheNumber.cpp  Jabuke.cpp  Landline.cpp  ReversingRoads.cpp  TrainSorting.cpp  TurtleMaster.cpp  UnionFind.cpp  freeWeights.cpp  roomPainting.cpp  template.cpp
Haskell/: DifferentProblem.hs
Java/: pom.xml
Java/src/main/java/: Base2Palindrome.java  BookCircle.java  ChemistVow.java  ChessTournament.java  CitrusIntern.java  ClockPictures.java  ClosestPair2.java  GruesomeCave.java  Landline.java  MazeMakers.java  MinFlow.java  Oddities.java  Paintball.java  Parking.java  PowersAndModules.java  ReachableRoads.java  RebelPortals.java  RobotProtection.java  SegmentTree.java  Shopaholic.java  SumOfTheOthers.java  Supercomputer.java  SupercomputerV2.java  TheGrandAdventure.java  Thermostat.java  TrainSorting.java  Turbo.java  UnionFind.java  ZebrasAndOcelots.java  bringItOn.java  freeWeights.java  reversingRoads.java  roompainting.java  simplePolygon.java
Java/src/test/java/: ChemistVowTest.java  ClosestPair2Test.java  GruesomeCaveTest.java  TrainSortingTest.java
Java/src/test/resources/: chemistryWords.txt  closestPair.txt
Notes/: Algorithm Notes.tex  uib_frontpage.tex
