project(INF237)
#add_executable(GuessTheNumber src/GuessTheNumber.cpp)
#add_executable(TurtleMaster src/TurtleMaster.cpp)
#add_executable(ReversingRoads src/ReversingRoads.cpp)
#add_executable(roomPainting src/roomPainting.cpp)
#add_executable(freeWeights src/freeWeights.cpp)
#add_executable(TrainSorting src/TrainSorting.cpp)
#add_executable(ChemistVow src/ChemistVow.cpp)
add_executable(Landline src/Landline.cpp)