cmake_minimum_required(VERSION 2.8.8)
project(INF237)
add_executable(GuessTheNumber src/GuessTheNumber.cpp)
add_executable(TurtleMaster src/TurtleMaster.cpp)
add_executable(roomPainting src/roomPainting.cpp)
add_executable(freeWeights src/freeWeights.cpp)
add_executable(TrainSorting src/TrainSorting.cpp)
add_executable(ChemistVow src/ChemistVow.cpp)
add_executable(Landline src/Landline.cpp)
add_executable(GruesomeCave src/GruesomeCave.cpp)
add_executable(Jabuke src/Jabuke.cpp)
add_executable(CountingTriangles src/CountingTriangles.cpp)
add_executable(ColoringGraphs src/ColoringGraphs.cpp)
add_executable(ClosestPair2 src/ClosestPair2.cpp)